<resources>
    <string name="app_name">Password manager</string>
    <string name="save_btn">Save</string>
    <string name="hint_name">Name</string>
    <string name="hint_url">Url</string>
    <string name="hint_login">Login</string>
    <string name="hint_password">Password</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="web_site">Web-site</string>
    <string name="error_input">Incorrect input</string>
    <string name="exit">EXIT</string>
    <string name="ready">Ready</string>
    <string name="confirmation">Confirmation</string>
    <string name="cancel">Cancel</string>
</resources>