<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    tools:context=".presentation.PasswordItemViewFragment">


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnChange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_float_btn"
        android:clickable="true"
        android:focusable="true"
        android:importantForAccessibility="no"
        android:src="@drawable/icon_change"
        app:backgroundTint="@color/third"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:shapeAppearanceOverlay="@style/rounded_fab"
        app:tint="@color/white" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tbViewPasswordItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/second"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/icon_arrow_back" />

    <ImageView
        android:id="@+id/imgSite"
        android:layout_width="@dimen/size_icon_site"
        android:layout_height="@dimen/size_icon_site"
        android:layout_marginTop="@dimen/margin_top_view"
        android:layout_marginEnd="@dimen/margin_horizontal_view"
        android:importantForAccessibility="no"
        android:src="@drawable/icon_img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tbViewPasswordItem" />

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_horizontal_view"
        android:layout_marginTop="@dimen/margin_top_view"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_name_view"
        android:textIsSelectable="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tbViewPasswordItem"
        tools:text="vk.com" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_horizontal_view"
        android:layout_marginVertical="@dimen/margin_vertical_view"
        android:hint="@string/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgSite"
        app:endIconMode="custom"
        app:endIconDrawable="@drawable/icon_profile"
        tools:ignore="KeyboardInaccessibleWidget">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:cursorVisible="false"
            tools:text="@string/login" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_horizontal_view"
        android:layout_marginVertical="@dimen/margin_vertical_view"
        android:hint="@string/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilLogin"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:focusable="false"
            android:cursorVisible="false"
            tools:text="@string/password" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilUrl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_horizontal_view"
        android:layout_marginVertical="@dimen/margin_vertical_view"
        android:hint="@string/web_site"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilPassword"
        app:endIconMode="custom"
        app:endIconDrawable="@drawable/icon_url">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etUrl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:cursorVisible="false"
            tools:text="@string/web_site" />
    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>